---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 962
expression: "zizmor().input(input_under_test(\"undocumented-permissions/contents-read-with-other.yml\")).args([\"--persona=pedantic\"]).run()?"
---
error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:8:3
  |
8 |   issues: write
  |   ^^^^^^^^^^^^^ issues: write is overly broad at the workflow level
  |
  = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
 --> @@INPUT@@:8:3
  |
8 |   issues: write
  |   ^^^^^^^^^^^^^ needs an explanatory comment
  |
  = note: audit confidence → High

2 findings: 0 informational, 1 low, 0 medium, 1 high
